--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:layout_marginStart="10dp"
         android:text="팀원 소개"
         android:textSize="18dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -162,7 +162,7 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/pic3"
+        android:background="@drawable/main_img3"
         app:layout_constraintEnd_toEndOf="@+id/memberIB1"
         app:layout_constraintStart_toStartOf="@+id/memberIB1"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
