--- a/app/src/main/res/menu/menu_pop_up.xml
+++ b/app/src/main/res/menu/menu_pop_up.xml
@@ -27,4 +27,8 @@
     <item
         android:id="@+id/themeMode"
         android:title="테마 변경" />
+
+    <item
+        android:id="@+id/go_maker"
+        android:title="만든이" />
 </menu>
