--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -194,7 +194,7 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/pic4"
+        android:background="@drawable/thumbnail4"
         app:layout_constraintEnd_toEndOf="@+id/memberIB2"
         app:layout_constraintStart_toStartOf="@+id/memberIB2"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
