--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toBottomOf="@id/main_toolbar"
         app:layout_constraintVertical_bias="0.009" />
 
+
     <View
         android:id="@+id/view2"
         android:layout_width="160dp"
@@ -37,8 +38,9 @@
 
     <ImageButton
         android:id="@+id/teamIB"
-        android:background="@drawable/pic99"
+        android:src="@drawable/pic99"
         android:layout_width="380dp"
+        android:scaleType="fitXY"
         android:layout_height="170dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
@@ -83,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView10"
         tools:ignore="MissingConstraints" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/memberIB1"
         android:layout_width="135dp"
         android:layout_height="150dp"
