--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,23 +29,26 @@
         android:layout_width="160dp"
         android:layout_height="3dp"
         android:layout_marginStart="15dp"
+        android:layout_marginBottom="10dp"
         android:background="#A5A5A5"
+        app:layout_constraintBottom_toTopOf="@+id/teamIB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/teamName" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/teamIB"
-        android:background="@drawable/pic99"
-        android:layout_width="380dp"
+        android:layout_width="wrap_content"
         android:layout_height="170dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/pic99"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/view2"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
 
     <TextView
