--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -4,15 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
     tools:context=".AddActivity">
 
 
+    <include
+        layout = "@layout/toolbar"
+        android:id="@+id/add_toolbar"/>
+
+
     <TextView
+
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="55dp"
         app:layout_constraintStart_toStartOf="@id/line"
         app:layout_constraintTop_toTopOf="parent"
         android:text="댓글 달기"
@@ -24,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_marginEnd="35dp"
+        android:layout_marginStart="30dp"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintStart_toStartOf="@id/titleTextView"
         android:background="@color/grey" />
@@ -42,27 +48,31 @@
         android:id="@+id/nameTextView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="김재현"
+        android:text="@string/name1"
         android:textSize="20sp"
+        android:layout_marginStart="30dp"
         app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="100dp"/>
 
     <EditText
         android:id="@+id/nameEditText1"
-        android:layout_width="310dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/guideLine"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="100dp"
         app:layout_constraintBaseline_toBaselineOf="@id/nameTextView1"
-        app:layout_constraintBottom_toBottomOf="@id/nameTextView1"/>
+        app:layout_constraintBottom_toBottomOf="@id/nameTextView1"
+        app:layout_constraintTop_toTopOf="@+id/nameTextView1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/guideLine" />
 
     <TextView
         android:id="@+id/nameTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="김재혁"
+        android:layout_marginStart="30dp"
+        android:text="@string/name2"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/nameTextView1"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,9 +80,10 @@
 
     <EditText
         android:id="@+id/nameEditText2"
-        android:layout_width="310dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="100dp"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintStart_toEndOf="@id/nameTextView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,17 +94,20 @@
         android:id="@+id/nameTextView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="임채명"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="30dp"
+        android:text="@string/name3"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/nameTextView2"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="50dp"/>
+        />
 
     <EditText
         android:id="@+id/nameEditText3"
-        android:layout_width="310dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="100dp"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintStart_toEndOf="@id/nameTextView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,17 +118,20 @@
         android:id="@+id/nameTextView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이성민"
+        android:text="@string/name4"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="30dp"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/nameTextView3"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="50dp"/>
+        />
 
     <EditText
         android:id="@+id/nameEitText4"
-        android:layout_width="310dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="100dp"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintStart_toEndOf="@id/nameTextView4"
         app:layout_constraintEnd_toEndOf="parent"
